--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 
     <div id="status"></div>
 
-    <script src="main.js" type="module"></script>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
