--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
     <div id="status"></div>
 
+    <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
