--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Procesador de Video</title>
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/styles.css">
 </head>
 <body>
     <div id="root"></div>
