--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,68 @@
     </div>
 
     <script>
+        // Función para cargar scripts de manera segura
+        function loadScript(src) {
+            return new Promise((resolve, reject) => {
+                const script = document.createElement('script');
+                script.src = src;
+                script.onload = () => resolve(true);
+                script.onerror = () => reject(new Error(`Error cargando script: ${src}`));
+                document.head.appendChild(script);
+            });
+        }
+
+        // Función de inicialización de FFmpeg
+        async function initFFmpeg() {
+            const scripts = [
+                '/ffmpeg/ffmpeg.min.js',
+                '/ffmpeg/ffmpeg-core.js', 
+                '/ffmpeg/ffmpeg-core.worker.js'
+            ];
+
+            try {
+                // Cargar scripts secuencialmente
+                for (const scriptSrc of scripts) {
+                    await loadScript(scriptSrc);
+                }
+
+                // Verificación de FFmpeg
+                if (typeof createFFmpeg === 'undefined') {
+                    throw new Error('FFmpeg no está definido después de cargar scripts');
+                }
+
+                // Configuración global
+                window.FFmpeg = window.FFmpeg || {};
+                window.FFmpeg.createFFmpeg = createFFmpeg;
+
+                console.log('FFmpeg inicializado correctamente');
+            } catch (error) {
+                console.error('Error de inicialización de FFmpeg:', error);
+                
+                // Mostrar mensaje de error al usuario
+                const statusDiv = document.getElementById('status');
+                if (statusDiv) {
+                    statusDiv.innerHTML = `
+                        <div class="error-message">
+                            <strong>Error de inicialización de FFmpeg</strong>
+                            <p>${error.message}</p>
+                            <p>Posibles soluciones:</p>
+                            <ul>
+                                <li>Actualice su navegador</li>
+                                <li>Verifique la conexión a internet</li>
+                                <li>Recargue la página</li>
+                            </ul>
+                        </div>
+                    `;
+                }
+            }
+        }
+
+        // Inicializar FFmpeg al cargar la página
+        initFFmpeg();
+    </script>
+
+    <script>
         // Configuración global para asegurar compatibilidad
         window.crossOriginIsolated = true;
         
@@ -433,10 +495,5 @@ Detalles de depuración:
         // Ejecutar inicialización
         init();
     </script>
-
-    <!-- Scripts de FFmpeg -->
-    <script src="/ffmpeg/ffmpeg.min.js"></script>
-    <script src="/ffmpeg/ffmpeg-core.js"></script>
-    <script src="/ffmpeg/ffmpeg-core.worker.js"></script>
 </body>
 </html>
