--- a/public/index.html
+++ b/public/index.html
@@ -125,16 +125,18 @@
         // Función para cargar scripts de manera segura
         function loadScript(src) {
             return new Promise((resolve, reject) => {
+                debugLog(`Intentando cargar script: ${src}`);
+
                 const script = document.createElement('script');
                 script.src = src;
-                script.async = false;  // Asegurar carga síncrona
+                script.async = false;
                 script.onload = () => {
                     debugLog(`Script cargado: ${src}`);
                     resolve(true);
                 };
                 script.onerror = (error) => {
                     debugLog(`Error cargando script: ${src}`, error);
-                    reject(new Error(`No se pudo cargar el script: ${src}`));
+                    reject(error);
                 };
                 document.head.appendChild(script);
             });
