--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@ async function processFiles() {
             a.textContent = `Descargar ${baseName}_Reencoded${extension}`;
           } else {
             a.download = `Reencoded_parte_H${i + 1}_V${j + 1}_${file.name}`;
-            a.textContent = `Descargar parte Horizontal${i + 1} Vertical${j + 1} de ${baseName}_Reencoded${extension}`;
+            a.textContent = `Descargar Parte Horizontal ${i + 1} Vertical ${j + 1} de ${baseName}_Reencoded${extension}`;
           }
 
           progressDetails.appendChild(a);
