--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,11 @@ function drawThumbnailWithGrid(file, parts = 1, vparts = 1) {
       // Generar miniatura del primer video seleccionado
       const parts = parseInt(partsInput.value, 10) || 1;
       const vparts = parseInt(vpartsInput.value, 10) || 1;
-      drawThumbnailWithGrid(currentFiles[0], parts, vparts);
+      
+      // Limpiar miniaturas anteriores
+      thumbnailsContainer.innerHTML = '';
+      currentFiles.forEach(file => {
+        drawThumbnailWithGrid(file, parts, vparts);
     }
   
   });
