--- a/public/index.html
+++ b/public/index.html
@@ -163,16 +163,25 @@ function drawThumbnailWithGrid(file, parts = 1, vparts = 1) {
   video.preload = 'metadata';
   video.src = URL.createObjectURL(file);
   video.muted = true;
-  video.currentTime = 3; // Tomar miniatura en segundo 3
+  video.currentTime = 3; // Tomar miniatura en el segundo 3
 
   video.onloadeddata = () => {
+    // Crear un canvas independiente por video
+    const canvas = document.createElement('canvas');
+    const ctx = canvas.getContext('2d');
+
+    // Definir dimensiones deseadas del canvas
+    canvas.width = 320;
+    canvas.height = 180;
+
     const scale = Math.min(canvas.width / video.videoWidth, canvas.height / video.videoHeight);
     const drawWidth = video.videoWidth * scale;
     const drawHeight = video.videoHeight * scale;
+
     ctx.clearRect(0, 0, canvas.width, canvas.height);
     ctx.drawImage(video, 0, 0, drawWidth, drawHeight);
 
-    // Dibujar líneas de división
+    // Dibujar grilla
     ctx.strokeStyle = 'red';
     ctx.lineWidth = 1.5;
 
@@ -198,6 +207,14 @@ function drawThumbnailWithGrid(file, parts = 1, vparts = 1) {
     }
 
     URL.revokeObjectURL(video.src);
+
+    // Mostrar resultado en pantalla
+    const container = document.getElementById('thumbnailContainer');
+    const label = document.createElement('p');
+    label.textContent = `Miniatura de: ${file.name}`;
+    label.style.margin = '8px 0 4px';
+    container.appendChild(label);
+    container.appendChild(canvas);
   };
 }
 
