--- a/public/index.html
+++ b/public/index.html
@@ -517,7 +517,9 @@ partsInput.addEventListener('input', () => {
   if (currentFiles.length > 0) {
     const parts = parseInt(partsInput.value, 10) || 1;
     const vparts = parseInt(vpartsInput.value, 10) || 1;
-    drawThumbnailWithGrid(currentFiles[0], parts, vparts);
+    currentFiles.forEach(file => {
+      drawThumbnailWithGrid(file, parts, vparts);
+    });
   }
 });
 
@@ -525,7 +527,9 @@ vpartsInput.addEventListener('input', () => {
   if (currentFiles.length > 0) {
     const parts = parseInt(partsInput.value, 10) || 1;
     const vparts = parseInt(vpartsInput.value, 10) || 1;
-    drawThumbnailWithGrid(currentFiles[0], parts, vparts);
+    currentFiles.forEach(file => {
+      drawThumbnailWithGrid(file, parts, vparts);
+    });
   }
 });
 
