--- a/public/index.html
+++ b/public/index.html
@@ -517,6 +517,8 @@ partsInput.addEventListener('input', () => {
   if (currentFiles.length > 0) {
     const parts = parseInt(partsInput.value, 10) || 1;
     const vparts = parseInt(vpartsInput.value, 10) || 1;
+    // Limpiar miniaturas anteriores
+    document.getElementById('thumbnailsContainer').innerHTML = '';
     currentFiles.forEach(file => {
       drawThumbnailWithGrid(file, parts, vparts);
     });
@@ -527,6 +529,8 @@ vpartsInput.addEventListener('input', () => {
   if (currentFiles.length > 0) {
     const parts = parseInt(partsInput.value, 10) || 1;
     const vparts = parseInt(vpartsInput.value, 10) || 1;
+    // Limpiar miniaturas anteriores
+    document.getElementById('thumbnailsContainer').innerHTML = '';
     currentFiles.forEach(file => {
       drawThumbnailWithGrid(file, parts, vparts);
     });
