--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
 
 <div id="thumbnailContainer" style="margin-top: 20px;">
   <h4>Preview a Exportar:</h4>
-  <canvas id="thumbnailContainer" width="480" height="270" style="border:1px solid #ccc;"></canvas>
+  <canvas id="canvas" width="480" height="270" style="border:1px solid #ccc;"></canvas>
 </div>
 
   
