--- a/public/index.html
+++ b/public/index.html
@@ -82,9 +82,9 @@
 
   <label>Profile H.264:
     <select id="h264Profile">
-      <option value="baseline">Baseline</option>
+      <option value="baseline" selected>Baseline</option>
       <option value="main">Main</option>
-      <option value="high" selected>High</option>
+      <option value="high">High</option>
     </select>
   </label>
 
